--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <!-- CARDN -->
     <div class="cardn-wrapper"></div>
     
+    <div class="cardk-toggle">
+    <button id="toggle-cardk-btn">🙈 카드K 보기/숨기기</button>
+    </div>
+
     <!-- CARDK -->
-    <div class="cardk-wrapper"></div>
+    <div class="cardk-wrapper hidden"></div>
   </div>
 </body>
 </html>
