--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <button id="toggle-cardk-btn">🙈 카드K 보기/숨기기</button>
     </div> -->  
     <!-- 펼침 토글  -->
-     
+
     <!-- CARDK -->
-    <div class="cardk-wrapper hidden"></div>
+    <div class="cardk-wrapper"></div>
   </div>
   <script src="script.js"></script>
 
