Add mode in prayer container

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="image-header">
+    <div class="title-image-header">
       <img src="img/title.png" alt="title">
     </div>
 
@@ -21,8 +21,23 @@
     </div> -->  
     <!-- 펼침 토글  -->
 
+    <div class="cardk-image-header">
+      <img src="img/cardk-title.png" alt="Cardk Title">
+    </div>
+
     <!-- CARDK -->
     <div class="cardk-wrapper"></div>
+    <div class="cardk-wrapper"></div>
+
+    <div style="margin-top: 30px;">
+      <p style="font-weight: bold; font-size: 16px; color: #bc6c71;">
+        :: Other Prayer Supporters
+      </p>
+      <p style="font-size: 14px; color: #333;">
+        Rev. Jang Sang-Won, Song Hyun-Gyu, Lee Soo-jin, Song Da-young, Ko Eun-ryul, Kim Sang-Gu, Hong Tae-Gyum, Jin Hee-Sung, Shin Hye-Won
+      </p>
+    </div>
+
   </div>
   <script src="script.js"></script>
 
