--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <div class="cardk-wrapper"></div>
     <div class="cardk-wrapper"></div>
 
-    <div style="margin-top: 30px;">
-      <p style="font-weight: bold; font-size: 16px; color: #bc6c71;">
+    <div class="other-prayer-supporters">
+      <p style="font-weight: bold; font-size: 18px; color: #bc6c71; margin-bottom: 0px;">
         :: Other Prayer Supporters
       </p>
-      <p style="font-size: 14px; color: #333;">
-        Rev. Jang Sang-Won, Song Hyun-Gyu, Lee Soo-jin, Song Da-young, Ko Eun-ryul, Kim Sang-Gu, Hong Tae-Gyum, Jin Hee-Sung, Shin Hye-Won
+      <p style="font-weight: bold; font-size: 16px; color: #333; margin-top: 10px;">
+        Rev. Jang Sang-Won, Song Hyun-Gyu, Lee Soo-jin, Song Da-young, Ko Eun-ryul, Kim Sang-Gu, <br>Hong Tae-Gyum, Jin Hee-Sung, Shin Hye-Won
       </p>
     </div>
 
