add supporter, Heo KyungJoo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         :: Other Prayer Supporters
       </p>
       <p style="font-weight: bold; font-size: 16px; color: #333; margin-top: 10px;">
-        Rev. Jang Sang-Won, Song Hyun-Gyu, Lee Soo-jin, Song Da-young, Ko Eun-ryul, Kim Sang-Gu, <br>Hong Tae-Gyum, Jin Hee-Sung, Shin Hye-Won
+        Rev. Jang Sang-Won, Song Hyun-Gyu, Lee Soo-jin, Song Da-young, Ko Eun-ryul, Kim Sang-Gu, <br>Hong Tae-Gyum, Jin Hee-Sung, Shin Hye-Won, Heo KyungJoo
       </p>
     </div>
 
